--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:frontend":"npm run dev -w apps/frontend",
     "dev:backend": "npm run dev -w apps/backend",
     "db:up": "docker compose up -d",
-    "dub:down": "docker compose down",
+    "db:down": "docker compose down",
     "db:reset": "docker compose down -v"
   },
   "repository": {
